NEGF: New method to extract the matrix Hamiltonians for electrodes + old code (removed from next version) and minor changes.

--- a/tests/QS/regtest-negf-1/TEST_FILES.toml
+++ b/tests/QS/regtest-negf-1/TEST_FILES.toml
@@ -4,4 +4,4 @@
 #      1 compares the last total energy in the file
 #      for details see cp2k/tools/do_regtest
 #
-"li_chain.inp"                          = []
+"H28.inp"                          = []
