--- a/tests/QS/regtest-negf-2/TEST_FILES.toml
+++ b/tests/QS/regtest-negf-2/TEST_FILES.toml
@@ -4,4 +4,4 @@
 #      1 compares the last total energy in the file
 #      for details see cp2k/tools/do_regtest
 #
-"li_chain_kp.inp"                       = []
+"H28_k.inp"                       = []
